--- a/1 pantalla de inicio.css
+++ b/1 pantalla de inicio.css
@@ -23,16 +23,16 @@ button {
 
 .main-container {
   position: relative;
-  width: 1440px;
-  height: 1281px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   background: #ffffff;
   overflow: hidden;
 }
 .rectangle {
   position: relative;
-  width: 1440px;
-  height: 165px;
+  width: 100%;
+  height: 100%;
   margin: -12px 0 0 0;
   background: #15193e;
   z-index: 1;
