--- a/1 pantalla de inicio.css
+++ b/1 pantalla de inicio.css
@@ -32,8 +32,8 @@ button {
 .rectangle {
   position: relative;
   width: 100%;
-  height: 100%;
-  margin: -12px 0 0 0;
+  height: 165px;
+
   background: #15193e;
   z-index: 1;
 }
