--- a/1 pantalla de inicio.css
+++ b/1 pantalla de inicio.css
@@ -32,7 +32,9 @@ button {
 .rectangle {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 165px;
+  width: 1440px;
+  height: 165px;
   margin: -12px 0 0 0;
   background: #15193e;
   z-index: 1;
